--- a/config.toml
+++ b/config.toml
@@ -15,11 +15,11 @@ footnoteReturnLinkContents = "^"
     google_search = true
     logo = "//xoztechs.com/static/img/logo.png"
     bio = """
-    <p> This is BIO. You can write something here. </p>
+    <p> U just Joined  A Cyber Corner , Welcom </p>
     <br />
-    <p>Also all html tags such as <a href="https://github.com/ertuil/erblog">link</a> are a good here.</p>
+    <p> This is about IT , Security  </p>
     """
-    # copyright = "Copyright © 2008–2019, Steve Francia and the Hugo Authors; all rights reserved."
+    copyright = "Copyright Xoz techs © 2020, Powred by <a href='#'>Hugo</a> an opensource software ; all rights reserved."
 
 
 [[menu.main]]
